--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Store Andres</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilos.css">
+    
 </head>
+
 <body>
-    <p>Hola</p>
+    <header>
+        <a href="index.html">
+            <img src="img/logo.png" alt="Logotipo">
+        </a>
+    </header>
+
+    <nav>
+        <a href="#">Tienda</a>
+        <a href="#">Nosotros</a>
+    </nav>
     
 </body>
 </html>
