--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
 </head>
 
 <body>
-    <header>
+    <!--Metodologia BEM-->
+
+    <!--El header es un bloque-->
+    <header class="header">
         <a href="index.html">
-            <img src="img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
 
-    <nav>
-        <a href="#">Tienda</a>
-        <a href="#">Nosotros</a>
+    <!--El nav es un bloque-->
+    <nav class="navegacion">
+        <!--El a es un modificador y se identifica con el (--)-->
+        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
+        <a class="navegacion__enlace" href="#">Nosotros</a>
     </nav>
     
 </body>
