--- a/index.html
+++ b/index.html
@@ -24,9 +24,161 @@
     <!--El nav es un bloque-->
     <nav class="navegacion">
         <!--El a es un modificador y se identifica con el (--)-->
-        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
-        <a class="navegacion__enlace" href="#">Nosotros</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
+
+    <main class="contenedor">
+        <h1>Nuestros Productos</h1>
+
+        <div class="grid">
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+        
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$30</p>   
+                    </div>
+                </a>
+            </div><!--Fin clase producto-->
+            <div class="grafico grafico--camisas"> </div>
+            <div class="grafico grafico--node"> </div>
+        </div>
+    </main>
+
     
+    <footer class="footer">
+        <p class="footer__texto">FrontEnd Store Andres todos los derechos reservados 2025.</p>
+    </footer>
 </body>
 </html>
