Fin seccion Nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -29,8 +29,78 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nosotros</h1>
+        <h1>Sobre nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>
+                    Duis finibus venenatis nisi id congue. Sed scelerisque risus eu justo faucibus, in egestas augue consectetur. Nunc lectus tortor, hendrerit ut orci accumsan, pellentesque laoreet ligula. Maecenas quis nulla sed mauris aliquet accumsan. Vivamus a consectetur dui. Curabitur ac massa quis lectus vestibulum porttitor eget sed nulla. Nunc imperdiet nibh et nisi posuere aliquet. Sed sed elit efficitur, tempus odio id, dignissim erat. Vivamus et ligula non ex scelerisque eleifend.
+                </p>
+
+                <p>
+                    Nunc consequat ex eget ex faucibus, at sodales dui vehicula. Nam imperdiet pretium ante, vitae porttitor odio tincidunt pulvinar. In scelerisque cursus tincidunt. Maecenas nibh felis, posuere id convallis ac, euismod vel metus. Maecenas gravida sit amet neque eu pharetra. Maecenas gravida sit amet neque eu pharetra.
+                </p>
+            </div>
+
+            <div class="nosotros__imagen">
+                <img src="img/nosotros.jpg" alt="Imagen modelo camisa">
+            </div>
+        </div>
+
+        <!-- Mi forma antes de ver la explicacion
+        <section class="contenedorNosotros">
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laborum quibusdam dolorem praesentium nemo fuga, consequatur fugit totam ullam et placeat tempora, autem nulla perferendis sunt, accusamus numquam quo cumque!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut beatae pariatur, accusantium eius similique ratione iste vitae provident voluptatum numquam neque eveniet soluta aliquid enim, optio explicabo rem non doloremque! <br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, nisi. Dolor similique quia nobis animi. Ducimus, necessitatibus labore non facilis est sunt ad iusto blanditiis ab voluptatibus. Nihil, asperiores dignissimos?
+                </p>
+            </article>
+
+            <div>
+                <img src="img/nosotros.jpg">
+            </div>
+        </section>
+       -->
     </main>
+
+    <section class="contenedor comprae">
+        <h2 class="comprar__titulo">¿Porque Comprar con Nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="imgagen__bloque" src="img/icono_1.png" alt="Porque comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>
+                    Duis finibus venenatis nisi id congue. Sed scelerisque risus eu justo faucibus, in egestas augue consectetur.
+                </p>
+            </div> <!--Cierre bloque-->
+
+            <div class="bloque">
+                <img class="imgagen__bloque" src="img/icono_2.png" alt="Porque comprar">
+                <h3 class="bloque__titulo">Para devs</h3>
+                <p>
+                    Duis finibus venenatis nisi id congue. Sed scelerisque risus eu justo faucibus, in egestas augue consectetur.
+                </p>
+            </div> <!--Cierre bloque-->
+
+            <div class="bloque">
+                <img class="imgagen__bloque" src="img/icono_3.png" alt="Porque comprar">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p>
+                    Duis finibus venenatis nisi id congue. Sed scelerisque risus eu justo faucibus, in egestas augue consectetur.
+                </p>
+            </div> <!--Cierre bloque-->
+
+            <div class="bloque">
+                <img class="imgagen__bloque" src="img/icono_4.png" alt="Porque comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>
+                    Duis finibus venenatis nisi id congue. Sed scelerisque risus eu justo faucibus, in egestas augue consectetur.
+                </p>
+            </div> <!--Cierre bloque-->
+        </div>
+    </section>
 
     
     <footer class="footer">
