Final area productos y Fin proyecto

--- a/productos.html
+++ b/productos.html
@@ -29,7 +29,28 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Productos</h1>
+        <h1>Reac js</h1>
+
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="Imagen del producto">
+
+            <div class="camisa__contenido">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima ducimus, vitae molestias vero optio aperiam aliquam consequuntur illum rem veniam fugiat incidunt odio obcaecati explicabo ex atque officiis nulla velit!
+                </p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>Seleccionar Talla</option>
+                        <option>Pequeña</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit"" type="submit" value="Agregar al Carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
     
